# PTI

./: .gitignore  README.md  blend.py  blend_pipeline.py  blocks.py  compat.py  config_blend.json  config_feature_extraction.json  config_synthesis.json  delete_configs.py  demo.py  feature_extraction.py  notebook.py  pti.sh  pyproject.toml  synthesize.py  synthesizer.py  test.py  train.py  trainer.py  video_feature_extractor.py
configs/: hyperparameters.py  paths_config.py
criteria/: localitly_regulizer.py
dataloaders/: dataloader.py  imageloader.py
features/CORP_AITANA_v01/: affine_matrix.npy  crop_coordinates.npy  inverse_affine_matrix.npy
features/JO/: affine_matrix.npy  crop_coordinates.npy  inverse_affine_matrix.npy
features/RAKAN/: affine_matrix.npy  inverse_affine_matrix.npy
helpers/: config_manager.py  face_ldks_calculation.py  feature_loader.py  ffmpeg_video_writer.py  optimal_crop_calculation.py  smoother.py
inputs_outpus/: blend_input.py
params/: blend_params.py  feature_extraction_params.py  synthesis_params.py  train_params.py
scripts/: latent_editor_wrapper.py  run_pti.py
training/coaches/: base_coach.py  single_id_coach.py
training/projectors/: w_projector.py
utils/: ImagesDataset.py  align_data.py  alignment.py  constants.py  log_utils.py
